# hyprresume

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  hyprpm.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: hyprresume.toml
pkg/: PKGBUILD-hyprland
pkg/aur/: PKGBUILD  hyprresume.install
plugin/: .clangd  Cargo.toml  build.rs  exports.map  shim.cpp
plugin/src/: lib.rs
scripts/: test-restore.sh
src/: config.rs  main.rs  models.rs
src/core/: daemon.rs  layout.rs  mod.rs  restore.rs  snapshot.rs  state.rs
src/core/layout/: dwindle.rs  master.rs  mod.rs
src/ipc/: client.rs  event_listener.rs  mod.rs
src/resolver/: cwd.rs  desktop.rs  flatpak.rs  mod.rs  proc.rs  profile.rs
src/tests/: cli.rs  mock_ipc.rs  mod.rs  simulation.rs
systemd/: hyprresume.service
